--- a/application/index/view/flowdesign/index.html
+++ b/application/index/view/flowdesign/index.html
@@ -30,15 +30,15 @@
     <div  class="panel-body"> 
      <div class="panel" >
       <div class="panel-header">属性控制栏</div>
-	  <div class="panel-body">
+	  <div class="panel-body" style='height: 800px;'>
 		<iframe src="" id="iframepage" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" onLoad="iFrameHeight()"></iframe>
 	  </div></div> 
    </div>
   </div> 
  </body>
 </html>
-<script type="text/javascript" src="__Flow__/js/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="__Flow__/js/jquery-ui/jquery-ui-1.9.2-min.js?" ></script>
+<script type="text/javascript" src="__Flow__/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="__Flow__/jquery-ui-1.9.2-min.js?" ></script>
 <script type="text/javascript" src="__Flow__/jsPlumb-1.3.16-all-min.js"></script>
 <script type="text/javascript" src="__Flow__/workflow.3.0.js"></script>
 <script type="text/javascript">
