--- a/application/index/view/flowdesign/super_role.html
+++ b/application/index/view/flowdesign/super_role.html
@@ -1,9 +1,7 @@
 {include file='pub/base' /}
-<link rel="stylesheet" type="text/css" href="__Flow__/js/jquery.multiselect2side/css/jquery.multiselect2side.css" media="screen" />
-
-<script type="text/javascript" src="__Flow__/js/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="__Flow__/css/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="__Flow__/js/jquery.multiselect2side/js/jquery.multiselect2side.js" ></script>
+<link rel="stylesheet" type="text/css" href="__Flow__/multiselect2side.css" media="screen" />
+<script type="text/javascript" src="__Flow__/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="__Flow__/multiselect2side.js" ></script>
 <article class="page-container">
 <table class="table table-bordered table-bg">
 			<tr><td>
@@ -16,7 +14,6 @@
 			</td></tr>
 			<tr><td>
 			 <select name="dialog_searchable" id="dialog_searchable" multiple="multiple" style="display:none;">
-           <!--  <option value="all">【全部】</option> -->
 			{volist name='role' id='k'}
             <option value="{$k.id}" >{$k.username}</option>
 			{/volist}
@@ -95,6 +92,3 @@
     });
 	
 </script>
-
-
-</block><!--end footer_js-->
