--- a/application/index/view/flowdesign/super_user.html
+++ b/application/index/view/flowdesign/super_user.html
@@ -1,9 +1,7 @@
 {include file='pub/base' /}
-<link rel="stylesheet" type="text/css" href="__Flow__/js/jquery.multiselect2side/css/jquery.multiselect2side.css" media="screen" />
-
-<script type="text/javascript" src="__Flow__/js/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="__Flow__/css/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="__Flow__/js/jquery.multiselect2side/js/jquery.multiselect2side.js" ></script>
+<link rel="stylesheet" type="text/css" href="__Flow__/multiselect2side.css" media="screen" />
+<script type="text/javascript" src="__Flow__/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="__Flow__/multiselect2side.js" ></script>
 <article class="page-container">
 <table class="table table-bordered table-bg">
 			<tr><td>
@@ -95,6 +93,3 @@
     });
 	
 </script>
-
-
-</block><!--end footer_js-->
