修正转出条件丢失问题

--- a/application/index/view/flowdesign/attribute.html
+++ b/application/index/view/flowdesign/attribute.html
@@ -126,7 +126,7 @@
            
         <button type="button" onclick="fnDelCon('@a')" class="wf_btn">删行</button>
         <button type="button" onclick="fnClearCon('@a')" class="wf_btn">清空</button>
-           
+           <input name="process_in_set_@a" id="process_in_set_@a" type="hidden">
         </td>
       </tr>
      
