修正转出条件不显示问题

--- a/application/index/view/flowdesign/attribute.html
+++ b/application/index/view/flowdesign/attribute.html
@@ -278,7 +278,7 @@
 <script type="text/javascript" src="__Flow__/js/flowdesign/attribute.js"></script>
 
 <script type="text/javascript">
-var _out_condition_data = [];
+var _out_condition_data = {$one.out_condition|raw};
 </script>
 
 <script type="text/javascript" src="__LIB__/Validform/5.3.2/Validform.min.js"></script>
