合并工作流发起，工作流设计，更名为Wf

--- a/application/index/view/wf/wfadd.html
+++ b/application/index/view/wf/wfadd.html
@@ -1,10 +1,10 @@
 {include file='pub/base' /}
 <article class="page-container">
 		{present name="info.id"}
-			<form action="{:url('edit')}" method="post" name="form" id="form">
+			<form action="{:url('wfedit')}" method="post" name="form" id="form">
 			<input type="hidden" name="id" value="{$info.id}">
 		{else /}
-			<form action="{:url('add')}" method="post" name="form" id="form">
+			<form action="{:url('wfadd')}" method="post" name="form" id="form">
 		{/present}
 		<table class="table table-border table-bordered table-bg">
 			<tr>
