--- a/application/index/view/wf/wfup.html
+++ b/application/index/view/wf/wfup.html
@@ -18,7 +18,7 @@
         var callbackId = $("#callbackId").val();
        // 文件上传
         $("#file-input").tpUpload({
-            url: '{:url("upload")}',
+            url: '{:url("wfupsave")}',
             data: {a: 'a'},
             drag: '',
             start: function () {
