--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -24,8 +24,8 @@
 			<dl>
 				<dt><i class="Hui-iconfont"></i> 工作流设计<i class="Hui-iconfont menu_dropdown-arrow"></i></dt>
 				<dd style="display: block;"><ul>
-				<li><a data-href="{:url('flowdesign/lists')}" data-title="工作流列表" href="javascript:void(0)">工作流列表</a></li>
-				<li><a data-href="{:url('flow/index')}" data-title="工作流监控" href="javascript:void(0)">工作流监控</a></li>
+				<li><a data-href="{:url('wf/wfindex')}" data-title="工作流列表" href="javascript:void(0)">工作流列表</a></li>
+				<li><a data-href="{:url('wf/wfjk')}" data-title="工作流监控" href="javascript:void(0)">工作流监控</a></li>
 				</dd>
 			</dl>
 			<dl>
