--- a/application/index/view/news/index.html
+++ b/application/index/view/news/index.html
@@ -29,13 +29,13 @@
 				<td>{$k.add_time|date='Y-m-d H:i'}</td>
 				<td>
 				<!--获取流状态-->
-				{:action('flow/status',['status'=>$k.status])}
+				{:action('wf/status',['status'=>$k.status])}
 				</td>
 				<td class="td-manage">
 				<div class="btn-group">
 					<span class="btn  radius size-S" data-title="查看" data-href="{:url('view',['id'=>$k.id])}" onclick="Hui_admin_tab(this)"><i class="Hui-iconfont">查看</span>
 						<!--按钮权限验证，审批权限验证，发起验证-->
-						{:action('flow/btn',['wf_fid'=>$k.id,'wf_type'=>'news','status'=>$k.status])}
+						{:action('wf/btn',['wf_fid'=>$k.id,'wf_type'=>'news','status'=>$k.status])}
 					<span class="btn  radius size-S" onclick="layer_show('修改','{:url('edit',['id'=>$k.id])}','850','500')">修改</span>
 				</div>
 				</td>
