--- a/application/index/view/wf/wfindex.html
+++ b/application/index/view/wf/wfindex.html
@@ -1,6 +1,6 @@
 {include file='pub/base' /}
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i>  Tpflow 工作流插件示例 
-<a onclick="layer_show('添加工作流','{:url('add')}','550','400')" class="btn btn-primary radius">添加工作流</a>
+<a onclick="layer_show('添加工作流','{:url('wfadd')}','550','400')" class="btn btn-primary radius">添加工作流</a>
 </nav>
 <div class="page-container">
 
@@ -27,15 +27,15 @@
 		 {/if}</td>
         <td>
 		{if condition='$vo.edit ==""'}
-	   <a class='btn  radius size-S' onclick="layer_show('修改','{:url('edit',['id'=>$vo.id])}','550','400')"> 修改</a>
-       <a class='btn  radius size-S' data-title="官方博客" data-href="{:url('/index/flowdesign/index',['flow_id'=>$vo['id']])}" onclick="Hui_admin_tab(this)" > 设计流程</a>
+	   <a class='btn  radius size-S' onclick="layer_show('修改','{:url('wfedit',['id'=>$vo.id])}','550','400')"> 修改</a>
+       <a class='btn  radius size-S' data-title="官方博客" data-href="{:url('/index/wf/wfdesc',['flow_id'=>$vo['id']])}" onclick="Hui_admin_tab(this)" > 设计流程</a>
 		{else/}
 		<a class='btn  radius size-S'> 运行中....</a>
 	   {/if}
 	   {if condition='$vo.status == 0'}
-		   <a class='btn  radius size-S' href="{:url('change',['id'=>$vo['id'],'status'=>1])}" target=> 禁用</a>
+		   <a class='btn  radius size-S' href="{:url('wfchange',['id'=>$vo['id'],'status'=>1])}" target=> 禁用</a>
 			{else/}
-		 <a class='btn  radius size-S' href="{:url('change',['id'=>$vo['id'],'status'=>0])}" target=> 启用</a>
+		 <a class='btn  radius size-S' href="{:url('wfchange',['id'=>$vo['id'],'status'=>0])}" target=> 启用</a>
 	   {/if}
 	   
 	   
