--- a/application/index/view/wf/wfcheck.html
+++ b/application/index/view/wf/wfcheck.html
@@ -10,6 +10,7 @@
 <input type="hidden" value="{$flowinfo.run_id}" name="run_id" id='run_id'>
 <input type="hidden" value="{$flowinfo.run_process}" name="run_process">
 <input type="hidden" value="{$flowinfo['nexprocess']['id']}" name="npid">
+<input type="hidden" value="{$_GET['sup']}" name="sup">
 		<table class="table table-border table-bordered table-bg" style='width:98%'>
 			<thead>
 			<tr>
