--- a/application/index/view/wf/wfatt.html
+++ b/application/index/view/wf/wfatt.html
@@ -24,9 +24,15 @@
                   <li class="purple" org-data="#6a5a8c" title="Purple">10</li>
                 </ul>
             </div></td></tr>
-			<tr><td>步骤类型</td><td  colspan='3'>
+			<tr><td>步骤类型</td><td>
 				<input type="radio" name="process_type" value="is_step" {if condition="$one.process_type eq 'is_step'"}checked="checked"{/if}>正常步骤
-                <input type="radio" name="process_type" value="is_one" {if condition="$one.process_type eq 'is_one'"}checked="checked"{/if}>设为第一步</td></tr>
+                <input type="radio" name="process_type" value="is_one" {if condition="$one.process_type eq 'is_one'"}checked="checked"{/if}>第一步</td>
+				<td>调用方法</td>
+				<td>
+					<input type="text" class="smalls" name="wf_action"  value="{$one.wf_action ?? 'view'}">
+				</td>
+				
+				</tr>
 				<tr><td>步骤模式</td><td  colspan='3'>
 				{if condition='count($one.process_to)>1'}
 				<input type="radio" name="wf_mode" value="1" {if condition="$one.wf_mode eq '1'"}checked="checked"{/if}>转出模式（符合执行）|
@@ -46,7 +52,7 @@
               <option value="2" {if condition="$one.is_back eq 2"}selected="selected"{/if}>允许回退</option>
             </select></td>
 			</tr>
-<tr><td>办理人员</td><td colspan='3'><select name="auto_person" id="auto_person_id" datatype="*" nullmsg="请选择办理人员或者角色！">
+			<tr><td>办理人员</td><td colspan='3'><select name="auto_person" id="auto_person_id" datatype="*" nullmsg="请选择办理人员或者角色！">
                 <option value="">请选择办理人员或者角色</option>
 				 {if condition="$one.process_type neq 'is_one'"}<option value="3" {if condition="$one['auto_person'] eq 3"}selected="selected"{/if}>自由选择</option>{/if}
 				 <option value="4" {if condition="$one['auto_person'] eq 4"}selected="selected"{/if}>指定人员</option>
@@ -55,19 +61,19 @@
               <span class="help-inline">*选择人员或者办理的角色！</span>
 			<div id="auto_person_3" {if condition="$one['auto_person'] neq 3"}class="hide"{/if}>
               办理人
-                    <input type="hidden" name="range_user_ids" id="range_user_ids" value="{$one.range_user_ids}" datatype="*" nullmsg="请选择办理人员！">
+                    <input type="hidden" name="range_user_ids" id="range_user_ids" value="{$one.range_user_ids}">
                     <input class="input-xlarge" readonly="readonly" type="text" placeholder="选择办理人范围" name="range_user_text" id="range_user_text" value="{$one.range_user_text ?? ''}"> 
 					<a class="btn" onclick="layer_show('办理人','{:url('super_user',['kid'=>'range_user'])}','350','500')">选择</a>
 				
             </div>
             <div id="auto_person_4" {if condition="$one['auto_person'] neq 4"}class="hide"{/if}>
-              办理人<input type="hidden" name="auto_sponsor_ids" id="auto_sponsor_ids" value="{$one.auto_sponsor_ids}" datatype="*" nullmsg="请选择办理人员！">
+              办理人<input type="hidden" name="auto_sponsor_ids" id="auto_sponsor_ids" value="{$one.auto_sponsor_ids}">
                     <input class="input-xlarge" readonly="readonly" type="text" placeholder="指定办理人" name="auto_sponsor_text" id="auto_sponsor_text" value="{$one.auto_sponsor_text ?? ''}"> 
 					<a class="btn" onclick="layer_show('办理人','{:url('super_user',['kid'=>'auto_sponsor'])}','350','500')">选择</a>
             </div>
             <div id="auto_person_5" {if condition="$one['auto_person'] neq 5"}class="hide"{/if}>
               指定角色
-                    <input type="hidden" name="auto_role_ids" id="auto_role_value" value="{$one.auto_role_ids}" datatype="*" nullmsg="请选择办理角色！">
+                    <input type="hidden" name="auto_role_ids" id="auto_role_value" value="{$one.auto_role_ids}" >
                     <input class="input-xlarge" readonly="readonly" type="text" placeholder="指定角色" name="auto_role_text" id="auto_role_text" value="{$one.auto_role_text ?? ''}">
 					<a class="btn" onclick="layer_show('办理人','{:url('super_role')}','350','500')">选择</a>
                
